@@ -196,7 +196,7 @@ class TestTable(unittest.TestCase):
         self.assertSequenceEqual(new_table.rows[1], (None, 2, 'c'))
         self.assertSequenceEqual(new_table.columns['one'], (1, None))
 
-    def test_distinct(self):
+    def test_distinct_column(self):
         rows = (
             (1, 2, 'a'),
             (2, None, None),
@@ -206,13 +206,51 @@ class TestTable(unittest.TestCase):
 
         table = journalism.Table(rows, self.column_types, self.column_names)
 
-        new_table = table.distinct(lambda row: row['one'])
+        new_table = table.distinct('one')
 
         self.assertIsNot(new_table, table)
         self.assertEqual(len(new_table.rows), 2)
         self.assertSequenceEqual(new_table.rows[0], (1, 2, 'a'))
         self.assertSequenceEqual(new_table.rows[1], (2, None, None))
         self.assertSequenceEqual(new_table.columns['one'], (1, 2))
+
+    def test_distinct_func(self):
+        rows = (
+            (1, 2, 'a'),
+            (2, None, None),
+            (1, 1, 'c'),
+            (1, None, None)
+        )
+
+        table = journalism.Table(rows, self.column_types, self.column_names)
+
+        new_table = table.distinct(lambda row: (row['two'], row['three']))
+
+        self.assertIsNot(new_table, table)
+        self.assertEqual(len(new_table.rows), 3)
+        self.assertSequenceEqual(new_table.rows[0], (1, 2, 'a'))
+        self.assertSequenceEqual(new_table.rows[1], (2, None, None))
+        self.assertSequenceEqual(new_table.rows[2], (1, 1, 'c'))
+        self.assertSequenceEqual(new_table.columns['one'], (1, 2, 1))
+
+    def test_distinct_none(self):
+        rows = (
+            (1, 2, 'a'),
+            (1, None, None),
+            (1, 1, 'c'),
+            (1, None, None)
+        )
+
+        table = journalism.Table(rows, self.column_types, self.column_names)
+
+        new_table = table.distinct()
+
+        self.assertIsNot(new_table, table)
+        self.assertEqual(len(new_table.rows), 3)
+        self.assertSequenceEqual(new_table.rows[0], (1, 2, 'a'))
+        self.assertSequenceEqual(new_table.rows[1], (1, None, None))
+        self.assertSequenceEqual(new_table.rows[2], (1, 1, 'c'))
+        self.assertSequenceEqual(new_table.columns['one'], (1, 1, 1))
 
     def test_chain_select_where(self):
         table = journalism.Table(self.rows, self.column_types, self.column_names)
