@@ -1,6 +1,8 @@
 0.3.0
 -----
 
+* Table.distinct now accepts a column name or key function. (#80)
+* Table.order_by now accepts a column name or key function. (#80)
 * Table.rank implemented. (#15)
 * Reached 100% test coverage. (#76)
 * Tests for Column._cast methods. (#20)
